fixed about image to not squish

--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ img {
   border-radius:3%;
   float:left;
   margin:1rem;
+  max-width: 410px;
+  max-height: 410px;
 }
 .about-section-wrap{
   min-block-size: 30%;
@@ -491,6 +493,12 @@ li {
   .card-special {
       flex: 1 1 100%;
       max-width: 100%;
+  }
+  .img-headshot{
+    max-width:100%;
+    max-height: 100%;
+    margin:0;
+    padding:0;
   }
 }
 
